--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -70,7 +70,8 @@
 .navbar5__cart__products {
   display: flex;
   flex-direction: column;
-
+  max-height: 760px;
+  overflow: auto;
 }
 .navbar5__cart__products__container {
   display: flex;
@@ -107,6 +108,8 @@
 }
 .navbar5__cart__products__imgWrapper img {
   width: 100%;
+  height: 100px;
+  object-fit: cover;
 }
 .navbar5__cart__products__texts {
   display: flex;
